--- a/views/sales_views.xml
+++ b/views/sales_views.xml
@@ -56,8 +56,8 @@
                 <field name="display_amount_tax_25" sum="Total" optional="hide" />
                 <field name="display_perc_nacionales" sum="Total" optional="hide" />
                 <field name="display_perc_internos" sum="Total" optional="hide" />
-                <field name="display_perc_iva" sum="Total" />
-                <field name="display_perc_iibb" sum="Total" />
+                <field name="display_perc_iva" sum="Total" optional="show" />
+                <field name="display_perc_iibb" sum="Total" optional="show" />
                 <field name="display_perc_municipales" sum="Total" optional="hide" />
                 <!-- TODO: Otros tributos -->
 
@@ -67,6 +67,7 @@
                 <field name="state" widget="badge" decoration-success="state == 'posted'" decoration-info="state == 'draft'" />
                 <!-- <field name="payment_state" widget="badge" decoration-danger="payment_state == 'not_paid'" decoration-warning="payment_state in ('partial', 'in_payment')" decoration-success="payment_state in ('paid', 'reversed')" attrs="{'invisible': [('payment_state', 'in', ('invoicing_legacy'))]}"/> -->
 
+                <field name="total_afip" />
                 <!-- TODO: tener en cuenta orden y filtros aplicados al descargar XLS -->
             </tree>
         </field>
